--- a/tango_with_django_project/templates/rango/index.html
+++ b/tango_with_django_project/templates/rango/index.html
@@ -11,9 +11,40 @@
             <strong>{{ boldmessage }}</strong><br />
         </div>
         <div>
-            <a href="/rango/about/">About</a><br />
-            <img src="{% static 'images/rango.jpg' %}"
-            alt="Picture of Rango" /> <!-- New line -->
-        </div>
+                <h2>Most Liked Categories</h2>
+                <ul>
+                    {% for category in categories %}
+                    <li>
+                        <!-- The following line is changed to add an HTML hyperlink -->
+                        <a href="/rango/category/{{ category.slug }}/">{{ category.name }}</a>
+                    </li>
+                    {% empty %}
+                        <strong>No categories available.</strong>
+                    {% endfor %}
+                </ul>
+            </div>
+    
+            <!-- Display Most Viewed Pages -->
+            <div>
+                <h2>Most Viewed Pages</h2>
+                <ul>
+                    {% for page in most_viewed_pages %}
+                        <li>
+                            <a href="{{ page.url }}">{{ page.title }}</a>
+                        </li>
+                    {% empty %}
+                        <strong>No pages available.</strong>
+                    {% endfor %}
+                </ul>
+            </div>
+            <div>
+                <a href="/rango/about/">About Rango</a><br />
+                <div>
+                <a href="/rango/add_category/">Add a New Category</a><br />
+                </div>
+                <img src="{% static 'images/rango.jpg' %}" 
+                    alt="Picture of Rango" />
+            </div>
     </body>
+
 </html>
