--- a/tango_with_django_project/templates/rango/about.html
+++ b/tango_with_django_project/templates/rango/about.html
@@ -1,17 +1,14 @@
 
-<!DOCTYPE html>
+{% extends 'rango/base.html' %}
 {% load static %}
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>About Rango</title>
-</head>
-<body>
+
+{% block title_block %}
+    About Rango
+{% endblock %}
+
+{% block body_block %}
     <h1>Rango says...</h1>
     <p>Here is the about page.</p>
-
-    <!-- Link back to index -->
-    <p><a href="{% url 'index' %}">Back to Home</a></p>
 
     <!-- Static image (Rango) -->
     <img src="{% static 'images/rango.jpg' %}" alt="Rango Image">
@@ -19,6 +16,7 @@
     <!-- Dynamic message -->
     <p>This tutorial has been put together by <strong>Tanvika Singh</strong>.</p>
 
+    <!-- Media image -->
     <img src="/media/cat.jpg" alt="Picture of a Cat">
-</body>
-</html>
+{% endblock %}
+
