--- a/tango_with_django_project/templates/rango/base.html
+++ b/tango_with_django_project/templates/rango/base.html
@@ -1,13 +1,48 @@
-<!DOCTYPE html>
+{% load staticfiles %}
+{% load rango_template_tags %}
+
 <html>
 <head>
-    <title>{% block title %}Rango{% endblock %}</title>
+    <title>
+        Rango - 
+        {% block title_block %}
+        How to Tango with Django!
+        {% endblock %}
+    </title>
 </head>
 <body>
     <div>
-        {% block content %}
-        <!-- Content will go here -->
+        {% block body_block %}
+        {% endblock %}
+    </div>
+
+    <hr />
+
+    <div>
+        <ul>
+            {% if user.is_authenticated %}
+                <li><a href="{% url 'rango:add_category' %}">Add a New Category</a></li>
+                {% if category.slug %}
+                    <li><a href="{% url 'rango:add_page' category.slug %}">Add Page</a></li>
+                {% endif %}
+                <li><a href="{% url 'rango:logout' %}">Logout</a></li>
+            {% else %}
+                <li><a href="{% url 'rango:register' %}">Sign Up</a></li>
+                <li><a href="{% url 'rango:login' %}">Login</a></li>
+            {% endif %}
+            <li><a href="{% url 'rango:about' %}">About</a></li>
+            <li><a href="{% url 'rango:index' %}">Index</a></li>
+        </ul>            
+    </div>
+
+    <div id="sidebar">
+        {% block sidebar_block %}
+            {% get_category_list %}
         {% endblock %}
     </div>
 </body>
 </html>
+
+
+
+
