--- a/tango_with_django_project/templates/rango/category.html
+++ b/tango_with_django_project/templates/rango/category.html
@@ -1,36 +1,37 @@
-<!DOCTYPE html>
-<html>
+{% extends 'rango/base.html' %}
+{% load static %}
 
-<head>
-    <title>Rango - {{ category.name }}</title>
-</head>
+{% block title_block %}
+    {% if category %}
+        {{ category.name }}
+    {% else %}
+        Unknown Category
+    {% endif %}
+{% endblock %}
 
-<body>
-    <div>
-        {% if category %}
-            <h1>{{ category.name }}</h1>
-            
-            {% if pages %}
-                <ul>
-                    {% for page in pages %}
-                        <li><a href="{{ page.url }}">{{ page.title }}</a></li>
-                    {% endfor %}
-                </ul>
-            {% else %}
-                <strong>No pages currently in this category.</strong>
-            {% endif %}
-            
-            <!-- Add Page Link -->
-            <br />
-            <a href="{% url 'rango:add_page' category.slug %}">Add Page</a>
+{% block body_block %}
+    {% if category %}
+        <h1>{{ category.name }}</h1>
+        {% if pages %}
+            <ul>
+                {% for page in pages %}
+                    <li><a href="{{ page.url }}">{{ page.title }}</a></li>
+                {% endfor %}
+            </ul>
         {% else %}
-            <p><strong>The specified category does not exist.</strong></p>
+            <strong>No pages currently in category.</strong>
         {% endif %}
-    </div>
-    
-    <div>
-        <a href="{% url 'rango:index' %}">Back to Home</a>
-    </div>
-</body>
 
-</html>
+        {% if user.is_authenticated %}
+            {% if category.slug %}
+                <a href="{% url 'rango:add_page' category.slug %}">Add Page</a> <br />
+            {% else %}
+                <p>Category does not have a valid slug.</p>
+            {% endif %}
+        {% else %}
+            <p><a href="{% url 'rango:login' %}">Log in</a> to add a page.</p>
+        {% endif %}
+    {% else %}
+        <p>The specified category does not exist.</p>
+    {% endif %}
+{% endblock %}
