--- a/tango_with_django_project/templates/rango/index.html
+++ b/tango_with_django_project/templates/rango/index.html
@@ -1,50 +1,58 @@
-<!DOCTYPE html>
-{% load staticfiles %}
-<html>
-    <head>
-        <title>Rango</title>
-    </head>
-    <body>
-        <h1>Rango says...</h1>
-        <div>
-            hey there partner! <br />
-            <strong>{{ boldmessage }}</strong><br />
-        </div>
-        <div>
-                <h2>Most Liked Categories</h2>
-                <ul>
-                    {% for category in categories %}
-                    <li>
-                        <!-- The following line is changed to add an HTML hyperlink -->
-                        <a href="/rango/category/{{ category.slug }}/">{{ category.name }}</a>
-                    </li>
-                    {% empty %}
-                        <strong>No categories available.</strong>
-                    {% endfor %}
-                </ul>
-            </div>
-    
-            <!-- Display Most Viewed Pages -->
-            <div>
-                <h2>Most Viewed Pages</h2>
-                <ul>
-                    {% for page in most_viewed_pages %}
-                        <li>
-                            <a href="{{ page.url }}">{{ page.title }}</a>
-                        </li>
-                    {% empty %}
-                        <strong>No pages available.</strong>
-                    {% endfor %}
-                </ul>
-            </div>
-            <div>
-                <a href="/rango/about/">About Rango</a><br />
-                <div>
-                <a href="/rango/add_category/">Add a New Category</a><br />
-                </div>
-                <img src="{% static 'images/rango.jpg' %}" 
-                    alt="Picture of Rango" />
-            </div>
-    </body>
+{% extends 'rango/base.html' %}
+{% load static %}
 
-</html>
+{% block title_block %}
+    Homepage
+{% endblock %}
+
+{% block body_block %}
+    <h1>Rango says...</h1>
+    <div>
+        {% if user.is_authenticated %}
+             howdy {{ user.username }}!
+        {% else %}
+             hey there partner!
+        {% endif %}
+    </div>
+    <div>
+        <strong>{{ boldmessage }}</strong><br />
+    </div>
+
+    <!-- Display Most Liked Categories -->
+    <div>
+        <h2>Most Liked Categories</h2>
+        <ul>
+            {% for category in categories %}
+                {% if category.slug %}
+                    <li>
+                        <a href="{% url 'rango:show_category' category.slug %}">{{ category.name }}</a>
+                    </li>
+                {% else %}
+                    <li>{{ category.name }} (No slug available)</li>
+                {% endif %}
+            {% empty %}
+                <strong>No categories available.</strong>
+            {% endfor %}
+        </ul>
+    </div>
+
+    <!-- Display Most Viewed Pages -->
+    <div>
+        <h2>Most Viewed Pages</h2>
+        <ul>
+            {% for page in most_viewed_pages %}
+                <li>
+                    <a href="{{ page.url }}">{{ page.title }}</a>
+                </li>
+            {% empty %}
+                <strong>No pages available.</strong>
+            {% endfor %}
+        </ul>
+    </div>
+
+    <!-- Image -->
+    <div>
+        <img src="{% static 'images/rango.jpg' %}" alt="Picture of Rango" />
+    </div>
+{% endblock %}
+
