--- a/tango_with_django_project/templates/rango/about.html
+++ b/tango_with_django_project/templates/rango/about.html
@@ -18,5 +18,7 @@
 
     <!-- Media image -->
     <img src="/media/cat.jpg" alt="Picture of a Cat">
+
+    <p>Visits: {{ visits }}</p>
 {% endblock %}
 
